--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+.grid-container{
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: "coluna" "scroll";
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.coluna{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  position:fixed;
+  width: 50vh;
+  height: 100vh;
+  background: #D3CCE3;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border-right: 1px solid black;
+  grid-template-rows: 1fr 1fr;
+
+
+
 }
 
-.App-link {
-  color: #61dafb;
+.coluna img {
+  width: 30vh;
+  height: 30vh;
+  border-radius: 50%;
+  margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.coluna p{
+  margin: 0 auto;
+}
+
+.scroll{
+  padding-left: 40vh;
+  margin-left: 20vh;
+  margin-top: 10vh;
+  text-align: justify;  
+  
+  
 }
